--- a/site/homepage.html
+++ b/site/homepage.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="homepage.css">
+	<link rel="stylesheet" href="css/homepage.css">
 
 
     <!-- Custom styles for this template -->
@@ -21,7 +21,7 @@
   <body>
 
     <header class="navbar navbar-expand-md navbar-inverse bg-primary">
-      <a class="navbar-brand" href="#"><img src="QHbeerShop.png" width="70" height="70"></a>
+      <a class="navbar-brand" href="#"><img src="images/QHbeerShop.png" width="70" height="70"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
