--- a/site/register.html
+++ b/site/register.html
@@ -1,10 +1,30 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
+
+    <title>Signin</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="signin.css" rel="stylesheet">
+  </head>
+
+  <body class="text-center">
+
 <div>
     <form>
         <fieldset>
             <legend>Register</legend>
 
 			<div>
-                <label>Username</label>
+                <label class="sr-only">Username</label>
 
                 <div>
                     <input id="username" name="username" type="text" placeholder="Username">
@@ -12,7 +32,7 @@
             </div>
 			
 			<div>
-                <label>Password</label>
+                <label class="sr-only">Password</label>
 
                 <div>
                     <input id="password" name="password" type="text" placeholder="Password">
@@ -20,7 +40,7 @@
             </div>
 
             <div>
-                <label>Confirm Password</label>
+                <label class="sr-only">Confirm Password</label>
 
                 <div>
                     <input id="confirmPass" name="confirmPass" type="text" placeholder="Confirm Password">
@@ -28,7 +48,7 @@
             </div>
 			
 			<div>
-                <label>First Name</label>
+                <label class="sr-only">First Name</label>
 
                 <div>
                     <input id="firstName" name="LastName" type="text" placeholder="First Name">
@@ -36,7 +56,7 @@
             </div>
 			
 			<div>
-                <label>Second Name</label>
+                <label class="sr-only">Second Name</label>
 
                 <div>
                     <input id="SecondName" name="secondName" type="text" placeholder="Second Name">
@@ -44,7 +64,7 @@
             </div>
  
             <div>
-                <label>Email</label>
+                <label class="sr-only">Email</label>
 
                 <div>
                     <input id="email" name="email" type="text" placeholder="Email">
@@ -52,7 +72,7 @@
             </div>
 
             <div>
-                <label>Phone Number</label>
+                <label class="sr-only">Phone Number</label>
 
                 <div>
                     <input id="phone" name="phone" type="text" placeholder="Phone Number">
@@ -60,7 +80,7 @@
             </div>
 
             <div>
-                <label>Address</label>
+                <label class="sr-only">Address</label>
 
                 <div>
                     <input id="address" name="address" type="text" placeholder="Address">
@@ -83,3 +103,6 @@
         </fieldset>
     </form>
 </div>
+
+  </body>
+</html>
