--- a/site/register.html
+++ b/site/register.html
@@ -21,11 +21,10 @@
 <div>
     <form>
         <fieldset>
-            <legend>Register</legend>
+            <legend class="h3 mb-3 font-weight-normal">Register</legend>
 
 			<div>
                 <label class="sr-only">Username</label>
-
                 <div>
                     <input id="username" name="username" type="text" placeholder="Username">
                 </div>
@@ -33,23 +32,20 @@
 			
 			<div>
                 <label class="sr-only">Password</label>
-
                 <div>
-                    <input id="password" name="password" type="text" placeholder="Password">
+                    <input id="password" name="password" type="password" placeholder="Password">
                 </div>
             </div>
 
             <div>
                 <label class="sr-only">Confirm Password</label>
-
                 <div>
-                    <input id="confirmPass" name="confirmPass" type="text" placeholder="Confirm Password">
+                    <input id="confirmPass" name="confirmPass" type="password" placeholder="Confirm Password">
                 </div>
             </div>
 			
 			<div>
                 <label class="sr-only">First Name</label>
-
                 <div>
                     <input id="firstName" name="LastName" type="text" placeholder="First Name">
                 </div>
@@ -57,7 +53,6 @@
 			
 			<div>
                 <label class="sr-only">Second Name</label>
-
                 <div>
                     <input id="SecondName" name="secondName" type="text" placeholder="Second Name">
                 </div>
@@ -65,15 +60,13 @@
  
             <div>
                 <label class="sr-only">Email</label>
-
                 <div>
-                    <input id="email" name="email" type="text" placeholder="Email">
+                    <input id="email" name="email" type="email" placeholder="Email">
                 </div>
             </div>
 
             <div>
                 <label class="sr-only">Phone Number</label>
-
                 <div>
                     <input id="phone" name="phone" type="text" placeholder="Phone Number">
                 </div>
@@ -81,7 +74,6 @@
 
             <div>
                 <label class="sr-only">Address</label>
-
                 <div>
                     <input id="address" name="address" type="text" placeholder="Address">
                 </div>
@@ -95,11 +87,11 @@
 			
             <div>
                 <div>
-                    <button type="reset">Cancel</button>
-                    <button type="submit">Register</button>
+                    <button class="btn btn-lg btn-primary btn-block" type="reset">Cancel</button>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
                 </div>
             </div>
-
+			<p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
         </fieldset>
     </form>
 </div>
