header and footer separation

--- a/site/header.html
+++ b/site/header.html
@@ -9,6 +9,9 @@
 
     <title>Quality House Beer Shop</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/styles.css">
+      <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+      <script src="js/script.js"></script>
 
   </head>
 
@@ -25,10 +28,10 @@
             <a class="nav-link navbar-custom" href="#">Catalog <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navbar-custom" href="#">Register</a>
+            <a class="nav-link navbar-custom" href="register.html">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navbar-custom" href="#">Login</a>
+            <a class="nav-link navbar-custom" href="login.html">Login</a>
           </li>
       <li class="nav-item">
             <a class="nav-link navbar-custom" href="#">Basket</a>
@@ -41,9 +44,8 @@
         <form class="form-inline my-4 my-sm-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> 
-      
+        </form>
+
 </header>
 </body>
 </html>
-	
