--- a/site/header.html
+++ b/site/header.html
@@ -9,11 +9,11 @@
 <center><h1>Quality House Premium Beer</h1></center>
 <nav>
     <ul>
-        <li><div class="button">LOGIN</div></li>
+        <li><a href="login.html" class="button">LOGIN</a></li>
         <li><a href="#"><i class="fa fa-home"></i> HOME</a></li>
         <li><a href="#"><i class="fa fa-list"></i> CATALOG</a></li>
         <li><a href="register.html"><i class="fa fa-user"></i> REGISTER</a></li>
-        <li><a href="#"><i class="fa fa-pencil"></i> ABOUT</a></li>
+        <li><a href="about.html"><i class="fa fa-pencil"></i> ABOUT</a></li>
     </ul>
 </nav>
 </body>
