about page created

--- a/site/login.html
+++ b/site/login.html
@@ -47,4 +47,12 @@
     <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
   </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+          crossorigin="anonymous"></script>
+  <!--<script>-->
+      <!--$(document).ready(function(){-->
+          <!--$("button").addClass("btn-danger")-->
+          <!--;-->
+      <!--});-->
+  <!--</script>-->
 </html>
