--- a/site/about.html
+++ b/site/about.html
@@ -19,9 +19,35 @@
   </head>
 
   <body class="text-center">
-  <div class="container" style="width: 80%">
-
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.0728416807524!2d23.308626915721348!3d42.680999322765075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa851b0d4f2c71%3A0x5b88eff9e12f3558!2sul.+%22Balsha%22+1%2C+1408+Ivan+Vazov%2C+Sofia!5e0!3m2!1sen!2sbg!4v1520952645112" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <div class="container" style="width: 80%; margin-top: 20px">
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAOg2JT3f84wW301rsizycf61k4ypzxbzw"></script>
+      <div id="map_canvas" style="height: 550px; width: 100%;">
+        <script type="text/javascript">
+            function init_map() {
+                var lat = 42.6810000;
+                var lng = 23.3107544;
+                var textOfInfoWindow = "QH Beer Shop" + '<br>' + "ул.„Балша“ 1, кв. Иван Вазов, София 1408" + '<br>' + "етаж 3";
+                var myOptions = {
+                    zoom: 17,
+                    center: new google.maps.LatLng(lat, lng),
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                };
+                map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+                marker = new google.maps.Marker({
+                    map: map,
+                    position: new google.maps.LatLng(lat, lng)
+                });
+                infowindow = new google.maps.InfoWindow({
+                    content: textOfInfoWindow,
+                });
+                google.maps.event.addListener(marker, "click", function () {
+                    infowindow.open(map, marker);
+                });
+                infowindow.open(map, marker);
+            }
+            google.maps.event.addDomListener(window, 'load', init_map);
+        </script>
+      </div>
 
     <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
   </div>
