logo added to header

--- a/site/footer.html
+++ b/site/footer.html
@@ -10,7 +10,8 @@
     <title>Quality House Beer Shop</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -18,87 +19,13 @@
 <footer class="container">
     <div>
         <center>
-            <h3>Quality House Premium Beer</h3>
+            <h3>Quality House Premium Beer 	&#174; 2018</h3>
             <h6>phone: +359 123 123 123</h6>
         </center>
     </div>
     <br><br><br>
-    <center><h4>OUR TEAM:</h4></center>
+    <center><h4>CREATED BY QUALITY HOUSE TEAM</h4></center>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                <div class="thumbnail">
-                    <img src="images/team-member.png">
-                    <div class="caption" align="center">
-                        <h4>Petar Aleksandrov</h4>
-                        <p>Programmer</p>
-                        <p>e-mail:<a href="mailto:mike.brown@qhbeer.com" target="_top">Send Mail</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                <div class="thumbnail">
-                    <img src="images/team-member.png">
-                    <div class="caption" align="center">
-                        <h4>Kalin Markov</h4>
-                        <p>Programmer</p>
-                        <p>e-mail:<a href="mailto:mike.brown@qhbeer.com" target="_top">Send Mail</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                <div class="thumbnail">
-                    <img src="images/team-member.png">
-                    <div class="caption" align="center">
-                        <h4>Stanislav Tzvetkachki</h4>
-                        <p>Programmer</p>
-                        <p>e-mail:<a href="mailto:mike.brown@qhbeer.com" target="_top">Send Mail</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                <div class="thumbnail">
-                    <img src="images/team-member.png">
-                    <div class="caption" align="center">
-                        <h4>Todor Miroleskov</h4>
-                        <p>Programmer</p>
-                        <p>e-mail:<a href="mailto:mike.brown@qhbeer.com" target="_top">Send Mail</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                <div class="thumbnail">
-                    <img src="images/team-member.png">
-                    <div class="caption" align="center">
-                        <h4>Mihael Ashdzhiyan</h4>
-                        <p>Programmer</p>
-                        <p>e-mail:<a href="mailto:mike.brown@qhbeer.com" target="_top">Send Mail</a></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                <div class="thumbnail">
-                    <img src="images/team-member.png">
-                    <div class="caption" align="center">
-                        <h4>Krasimir Hristov</h4>
-                        <p>Programmer</p>
-                        <p>e-mail:<a href="mailto:mike.brown@qhbeer.com" target="_top">Send Mail</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </footer>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<!-- Latest compiled and minified JavaScript -->
 </body>
 </html>
