--- a/site/header.html
+++ b/site/header.html
@@ -8,10 +8,12 @@
 </head>
 <center><h1>Quality House Premium Beer</h1></center>
 <nav>
+    <a href="#" class="navbar-left"><img src="images/logoNew.png" width="250" height="250"></a>
     <ul>
         <li><a href="login.html" class="button">LOGIN</a></li>
         <li><a href="#"><i class="fa fa-home"></i> HOME</a></li>
         <li><a href="#"><i class="fa fa-list"></i> CATALOG</a></li>
+        <li><a href="about.html"><i class="fa fa-pencil"></i> BASKET</a></li>
         <li><a href="register.html"><i class="fa fa-user"></i> REGISTER</a></li>
         <li><a href="about.html"><i class="fa fa-pencil"></i> ABOUT</a></li>
     </ul>
