new header and footer

--- a/site/footer.html
+++ b/site/footer.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<div class="container">
 <footer class="container">
     <div>
         <center>
@@ -27,5 +28,6 @@
     <center><h4>CREATED BY QUALITY HOUSE TEAM</h4></center>
 
 </footer>
+</div>
 </body>
 </html>
