--- a/site/header.html
+++ b/site/header.html
@@ -2,21 +2,25 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" media="screen" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-    </link>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<center><h1>Quality House Premium Beer</h1></center>
+<center><h1>Quality House Beer</h1></center>
+<body>
 <nav>
-    <a href="#" class="navbar-left"><img src="images/logoNew.png" width="250" height="250"></a>
+    <a href="#" class="navbar-left"><img src="images/logoNew3.png" width="250" height="250"></a>
+
     <ul>
-        <li><a href="login.html" class="button">LOGIN</a></li>
         <li><a href="#"><i class="fa fa-home"></i> HOME</a></li>
         <li><a href="#"><i class="fa fa-list"></i> CATALOG</a></li>
-        <li><a href="about.html"><i class="fa fa-pencil"></i> BASKET</a></li>
-        <li><a href="register.html"><i class="fa fa-user"></i> REGISTER</a></li>
         <li><a href="about.html"><i class="fa fa-pencil"></i> ABOUT</a></li>
+        <li><a href="register.html"><i class="fa fa-user"></i> REGISTER</a></li>
+        <li><a href="login.html"><i class="fa fa-user"></i>LOGIN</a></li>
+        <li><a href="about.html"><i class="fa fa-beer"></i> BASKET</a></li>
+        <li><a href="about.html"><i class="fa fa-question"></i> FAQ</a></li>
+        
     </ul>
+
 </nav>
 </body>
 </html>
