--- a/site/footer.html
+++ b/site/footer.html
@@ -20,13 +20,11 @@
 <footer class="container">
     <div>
         <center>
-            <h3>Quality House Premium Beer 	&#174; 2018</h3>
+            <h2>QUALITY HOUSE BEER</h2>
             <h6>phone: +359 123 123 123</h6>
         </center>
     </div>
-    <br><br><br>
-    <center><h4>CREATED BY QUALITY HOUSE TEAM</h4></center>
-
+    <center><h4>CREATED BY QUALITY HOUSE TEAM &#174; - 2018</h4></center>
 </footer>
 </div>
 </body>
