--- a/site/header.html
+++ b/site/header.html
@@ -17,7 +17,7 @@
                 <li><a href="login.html"><i class="fa fa-user"></i>LOGIN</a></li>
                 <li><a href="about.html"><i class="fa fa-beer"></i> BASKET</a></li>
                 <li><a href="about.html"><i class="fa fa-question"></i> FAQ</a></li>
-                <li><a href="about.html"><i class="fa fa-search"></i><input type="text" placeholder="Search" name="search"></a></li>
+                <li><a href="about.html"><i class="fa fa-search"></i><input style="box-sizing: border-box; border: 2px solid; border-radius: 15px;" type="text" placeholder=" Search..." name="search"></a></li>
             </ul>
         </nav>
     </body>
