some changes to about page

--- a/site/header.html
+++ b/site/header.html
@@ -12,12 +12,12 @@
             <ul>
                 <li><a href="#"><i class="fa fa-home"></i> HOME</a></li>
                 <li><a href="#"><i class="fa fa-list"></i> CATALOG</a></li>
-                <li><a href="about.html"><i class="fa fa-pencil"></i> ABOUT</a></li>
+                <li><a href="about.php"><i class="fa fa-pencil"></i> ABOUT</a></li>
                 <li><a href="register.html"><i class="fa fa-user"></i> REGISTER</a></li>
                 <li><a href="login.html"><i class="fa fa-user"></i>LOGIN</a></li>
-                <li><a href="about.html"><i class="fa fa-beer"></i> BASKET</a></li>
-                <li><a href="about.html"><i class="fa fa-question"></i> FAQ</a></li>
-                <li><a href="about.html"><i class="fa fa-search"></i><input type="text" placeholder="Search" name="search"></a></li>
+                <li><a href="about.php"><i class="fa fa-beer"></i> BASKET</a></li>
+                <li><a href="about.php"><i class="fa fa-question"></i> FAQ</a></li>
+                <li><a href="about.php"><i class="fa fa-search"></i><input type="text" placeholder="Search" name="search"></a></li>
             </ul>
         </nav>
     </body>
