--- a/site/design_.html
+++ b/site/design_.html
@@ -34,9 +34,9 @@
 				<li><a href="login.html" class="button">LOGIN</a></li>
 				<li><a href="#"><i class="fa fa-home"></i> HOME</a></li>
 				<li><a href="#"><i class="fa fa-list"></i> CATALOG</a></li>
-				<li><a href="about.html"><i class="fa fa-pencil"></i> BASKET</a></li>
+				<li><a href="about.php"><i class="fa fa-pencil"></i> BASKET</a></li>
 				<li><a href="register.html"><i class="fa fa-user"></i> REGISTER</a></li>
-				<li><a href="about.html"><i class="fa fa-pencil"></i> ABOUT</a></li>
+				<li><a href="about.php"><i class="fa fa-pencil"></i> ABOUT</a></li>
 			</ul>
 		</nav>
           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
