--- a/html_archive/header.html
+++ b/html_archive/header.html
@@ -3,21 +3,60 @@
     <head>
         <link type="text/css" rel="stylesheet" media="screen" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css">
+        <!--<link rel="stylesheet" href="../css/styles.css">-->
     </head>
     <body>
-        <h1>Quality House Beer</h1>
-        <nav>
-        <a href="#" class="navbar-left"><img src="images/logoNew_bubbles.png"></a>
-            <ul>
-                <li><a href="#"><i class="fa fa-home"></i> HOME</a></li>
-                <li><a href="#"><i class="fa fa-list"></i> CATALOG</a></li>
-                <li><a href="about.php"><i class="fa fa-pencil"></i> ABOUT</a></li>
-                <li><a href="register.html"><i class="fa fa-user"></i> REGISTER</a></li>
-                <li><a href="login.html"><i class="fa fa-user"></i>LOGIN</a></li>
-                <li><a href="about.html"><i class="fa fa-beer"></i> BASKET</a></li>
-                <li><a href="about.html"><i class="fa fa-question"></i> FAQ</a></li>
-                <li><a href="about.html"><i class="fa fa-search"></i><input style="box-sizing: border-box; border: 2px solid; border-radius: 11px;" type="text" placeholder=" Search..." name="search"></a></li>
+
+        <nav class="navbar navbar-expand-sm bg-light navbar-light" style="background-image: url('../images/backgroundNew.png'); height: 130px">
+            <div class="row">
+                <h1 class="col-lg-12">Quality House Beer</h1>
+            </div>
+            <a href="#" class="navbar-brand">
+                <img src="../images/logoNew_bubbles.png" style="width: 80%">
+            </a>
+
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class="fa fa-home"></i> HOME
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class="fa fa-list"></i> CATALOG
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.php">
+                        <i class="fa fa-pencil"></i> ABOUT
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="register.html">
+                        <i class="fa fa-user"></i> REGISTER
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">
+                        <i class="fa fa-user"></i>LOGIN
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">
+                        <i class="fa fa-beer"></i> BASKET
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">
+                        <i class="fa fa-question"></i> FAQ
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="about.html">
+                        <i class="fa fa-search"></i>
+                        <input style="box-sizing: border-box; border: 2px solid; border-radius: 11px;" type="text" placeholder=" Search..." name="search">
+                    </a>
+                </li>
             </ul>
         </nav>
     </body>
