--- a/html_archive/header.html
+++ b/html_archive/header.html
@@ -7,57 +7,64 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-sm bg-light navbar-light" style="background-image: url('../images/backgroundNew.png'); height: 130px">
-            <div class="row">
-                <h1 class="col-lg-12">Quality House Beer</h1>
+        <nav class="navbar navbar-expand-sm bg-light navbar-light " style="background-image: url('../images/backgroundNew.png'); ">
+            <div class="row justify-content-md-center">
+                <div class="col text-center">
+                    <h1>Quality House Beer</h1>
+                </div>
             </div>
-            <a href="#" class="navbar-brand">
-                <img src="../images/logoNew_bubbles.png" style="width: 80%">
-            </a>
-
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fa fa-home"></i> HOME
+            <div class="row justify-content-md-center">
+                <div class="col">
+                    <a href="#" class="navbar-brand">
+                        <img src="../images/logoNew_bubbles.png" style="width: 100%">
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fa fa-list"></i> CATALOG
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.php">
-                        <i class="fa fa-pencil"></i> ABOUT
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="register.html">
-                        <i class="fa fa-user"></i> REGISTER
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">
-                        <i class="fa fa-user"></i>LOGIN
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">
-                        <i class="fa fa-beer"></i> BASKET
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">
-                        <i class="fa fa-question"></i> FAQ
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="about.html">
-                        <i class="fa fa-search"></i>
-                        <input style="box-sizing: border-box; border: 2px solid; border-radius: 11px;" type="text" placeholder=" Search..." name="search">
-                    </a>
-                </li>
-            </ul>
+                </div>
+                <div class="col">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="fa fa-home"></i> HOME
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="fa fa-list"></i> CATALOG
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.php">
+                                <i class="fa fa-pencil"></i> ABOUT
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="register.html">
+                                <i class="fa fa-user"></i> REGISTER
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="login.html">
+                                <i class="fa fa-user"></i>LOGIN
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">
+                                <i class="fa fa-beer"></i> BASKET
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">
+                                <i class="fa fa-question"></i> FAQ
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="about.html">
+                                <i class="fa fa-search"></i>
+                                <input style="box-sizing: border-box; border: 2px solid; border-radius: 11px;" type="text" placeholder=" Search..." name="search">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </body>
 </html>
